# EasyBooking

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest_monitor.ini  test_plan.md
.github/workflows/: backend-ci.yml
alembic/: env.py
alembic/versions/: 2026_01_12_0932-3023a0f85655_add_models.py  2026_01_12_1056-1b36bf5f93a5_timezone.py  2026_01_13_1022-add_status_fields.py
front/: Dockerfile  README.fr.md  package-lock.json  package.json
front/app/: layout.tsx  page.tsx
front/app/dashboard/: page.tsx
front/app/login/: page.tsx
front/app/register/: page.tsx
front/components/: booking-list.tsx  create-booking-dialog.tsx  create-room-dialog.tsx  edit-room-dialog.tsx  room-list.tsx
front/lib/: auth-context.tsx  axios.ts
reports/: bandit-report.html
src/easy_booking/: cli.py  db.py  dependencies.py  main.py  settings.py  utils.py
src/easy_booking/api/v1/: __init__.py  auth.py  booking.py  room.py  user.py
src/easy_booking/auth/: auth.py
src/easy_booking/daos/: base.py  booking.py  room.py  user.py
src/easy_booking/exceptions/: __init__.py  base.py  booking.py  cli.py  room.py  user.py
src/easy_booking/models/: __init__.py  booking.py  room.py  test.py  user.py
src/easy_booking/schemas/: booking.py  room.py  user.py
src/easy_booking/services/: booking.py  room.py  user.py
src/easy_booking/sqlite/: db.py
tests/: conftest.py
tests/auth/: test_auth.py
tests/daos/: test_booking.py  test_room.py  test_user.py
tests/exceptions/: test_auth.py  test_base.py  test_booking.py  test_room.py  test_user.py
tests/integration/: test_auth_workflows.py  test_workflows.py
tests/performance/: test_services_performance.py
tests/routers/: test_auth.py  test_booking.py  test_room.py  test_user.py
tests/security/: test_security.py
tests/services/: test_booking.py  test_room.py  test_user.py
tests/utils/: fake_data_generator.py
